--- a/style.css
+++ b/style.css
@@ -8,14 +8,38 @@
 body{
     background: #4894B4;
 }
+/* General Styling */
 .start-btn,
-.info-box{
+.info-box,
+.quiz-box,
+.result-box{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2),
+                0px 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
+.buttons button.restart{
+    color: #fff;;
+    background: #4894B4;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.buttons button.restart:hover{
+    transform: scale(1.05);
+    background: #39758F;
+}
+.buttons button.quit{
+    color: #4894B4;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.buttons button.quit:hover{
+    transform: scale(1.05);
+    background: #39758F;
+    color: #fff;
+}
 /* Start Quiz Button Styling */
 .start-btn button{
     font-size: 25px;
@@ -28,12 +52,17 @@ body{
     background: #fff;
     cursor: pointer;
 }
+
+/* Info Box Styling */
+
 .info-box{
-    display: none;
     width: 540px;
     background: #fff;
     border-radius: 6px;
     box-shadow: 2px 10px 20px #222;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
 .info-box .info-title{
     display: flex;
@@ -70,23 +99,220 @@ body{
     height: 40px;
     width: calc(25% - 10px);
     font-size: 16px;
-    color: #fff;
     border: 1px solid #4894B4;
     border-radius: 4px;
     cursor: pointer;
     transition: all 0.3s ease;
 }
-.info-box .buttons button.restart{
-    color: #fff;;
+
+
+/* Quiz Box Styling */
+
+.quiz-box{
+    width: 540px;
+    background: #fff;
+    border-radius: 6px;
+    box-shadow: 0px 6px 15px #222;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
+}
+.quiz-box header{
+    position: relative;
+    z-index: 99;
+    height: 70px;
+    padding: 0 30px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 6px 6px 0 0;
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.1);
+}
+.quiz-box header .title{
+    font-size: 20px;
+    font-weight: 500;
+    
+}
+.quiz-box header .timer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    user-select: none;
+    width: 250px;
+    height: 45px;
+    background: #90BFD3;
+    padding: 0 8px;
+    border: 1px solid #b8daff;
+    border-radius: 6px;
+}
+.quiz-box header .timer .time-text,
+.quiz-box header .timer .timer-sec{
+    font-weight: 400;
+    font-size: 17px;
+}
+.quiz-box header .timer .timer-cou{
+    font-size: 18px;
+    font-weight: 500;
+    background: #343a40be;
+    height: 30px;
+    width: 40px;
+    color: #fff;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 6px;
+    border: 1px solid #343a40be;
+}
+.quiz-box section{
+    padding: 25px 30px 20px 30px;
+    background: #fff;
+}
+.quiz-box section .que-text{
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+}
+.quiz-box section .option-list{
+    padding: 20px 0;
+    display: block;
+}
+.quiz-box section .option-list .option{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    font-size: 17px;
+    padding: 8px 15px;
+    margin-bottom: 15px;
+    background: aliceblue;
+    border: 1px solid #84c5fe;
+    border-radius: 6px;
+    transition: all 0.3s ease;
+}
+.option-list .option:last-child{
+    margin-bottom: 0px;
+}
+.quiz-box section .option-list .option:hover{
+    color: #004085;
+    background: #cce5ff;
+    border-color: #b8daff;
+
+}
+.quiz-box section .option-list .option .icon{
+    text-align: center;
+    font-size: 13px;
+    line-height: 24px;
+    pointer-events: none;
+    height: 26px;
+    width: 26px;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    background: #fff;
+}
+.quiz-box section .option-list .option .icon.tick{
+    color: #23903c;
+    border-color: #23903c;
+    
+}
+.quiz-box section .option-list .option .icon.cross{
+    color: #a4283a;
+    border-color: #a4283a;
+}
+.quiz-box footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 60px;
+    width: 100%;
+    padding: 0 30px;
+}
+.quiz-box footer .total-que span{
+    display: flex;
+    user-select: none;
+}
+.quiz-box footer .total-que span p{
+    font-weight: 500;
+    padding: 0 5px;
+    
+}
+.quiz-box footer .total-que span p:first-child{
+    padding-left: 0px;
+}
+.quiz-box footer .next-btn{
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 400;
+    color: #fff;
     background: #4894B4;
+    height: 40px;
+    padding: 0 13px;
+    border-radius: 6px;
+    border: 1px solid #4894B4;
+    transition: all 0.3s ease;
 }
-.info-box .buttons button.restart:hover{
-    transform: scale(1.05);
-    background: #2A576A;
+.quiz-box footer .next-btn:hover{
+    background: #39758F;
+    border: 1px solid #39758F
 }
-.info-box .buttons button.quit{
-    color: #4894B4;
+/* Result Box Styling */
+.result-box{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+    background: #fff;
+    width: 600px;
+    padding: 25px 30px;
+    border-radius: 6px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
-.info-box .buttons button.quit:hover{
-    transform: scale(1.05);
+.result-box .icon{
+    font-size: 100px;
+    color: #F9C80E;
+    margin-bottom: 10px;
 }
+.result-box .complete-text{
+    font-size: 20px;
+    font-weight: 500;
+}
+.result-box .score-text span{
+    display: flex;
+    margin: 10px 0;
+    font-size: 18px;
+}
+.result-box .score-text span p{
+    font-weight: 500;
+    padding: 0 4px;
+}
+.result-box .buttons{
+    display: flex;
+    margin: 20px 0;
+}
+.result-box .buttons button{
+    margin: 0 10px;
+    height: 45px;
+    padding: 0 20px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 6px;
+    border: 1px solid #39758F;
+}
+
+
+
+
+
+
+
+
+
+
+
+
