Começou a mudar de páginas

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
     transform: translate(-50%, -50%);
     box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2),
                 0px 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: all 0.3s ease;
 }
 .buttons button.restart{
     color: #fff;;
@@ -53,8 +54,15 @@ body{
     cursor: pointer;
 }
 
-/* Info Box Styling */
+/* General active Class */
 
+.info-box.acitveInfo,
+.quiz-box.activeQuiz{
+    z-index: 5;
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+}
 .info-box{
     width: 540px;
     background: #fff;
