--- a/style.css
+++ b/style.css
@@ -227,7 +227,6 @@ body{
 .quiz-box section .option-list .option .icon.tick{
     color: #23903c;
     border-color: #23903c;
-    
 }
 .quiz-box section .option-list .option .icon.cross{
     color: #a4283a;
@@ -262,7 +261,6 @@ body{
 .quiz-box footer .total-que span p{
     font-weight: 500;
     padding: 0 5px;
-    
 }
 .quiz-box footer .total-que span p:first-child{
     padding-left: 0px;
@@ -340,8 +338,14 @@ body{
     .result-box{
         width: 75%;
     }
+    .info-box .buttons button{
+        width: 70%;
+    }
     .timeline{
         display: none;
+    }
+    .quiz-box section{
+        padding: 25px 30px 10px 30px;
     }
     .quiz-box header .title{
         font-size: 20px;
@@ -368,10 +372,29 @@ body{
     .quiz-box footer .next-btn{
         font-size: 16px;
     }
+    .result-box .score-text span{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
-@media (max-width: 497px){
-    .quiz-box header,
-    .quiz-box footer{
+@media (max-width: 465px){
+    .start-btn button{
+        font-size: 18px;
+        padding: 10px 20px;
+    }
+    .info-box .info-title{
+        font-size: 20px;
+    }
+    .info-box .info-list .info{
+        font-size: 16px;
+    }
+    .info-box .info-list .info span{
+        font-size: 17px;
+    }
+    .info-box .buttons button{
+        font-size: 16px;
+    }
+    .quiz-box header{
         flex-wrap: wrap;
         justify-content: center;
         height: 110px;
@@ -380,12 +403,27 @@ body{
         padding: 0px;
     }
     .quiz-box section{
-        padding: 25px 30px 0px 30px;
+        padding: 15px 20px 0px 20px;
         background: #fff;
     }
     .quiz-box footer{
         flex-wrap: wrap;
         justify-content: center;
+        height: 110px;
+    }
+    .quiz-box footer .next-btn{
+        margin-bottom: 10px;
+    }
+}
+@media (max-width: 385px){
+    .info-box .buttons{
+        display: block;
+        width: 100%;
+        height: 110px;
+        text-align: center;
+    }
+    .info-box .buttons button{
+        margin-top: 10px;
     }
 }
 
